--- a/20250410/THIRD/TRES.HTML
+++ b/20250410/THIRD/TRES.HTML
@@ -12,7 +12,7 @@
     <main>
         <p>
 
-            <a href="../INDEX.HTML"><img src="../colores/Sin título.png" alt="rojo" width="100px"></a>
+            <a href="../index.html"><img src="../colores/Sin título.png" alt="rojo" width="100px"></a>
             <a href="../SECOND/DOS.HTML"><img src="../colores/amarillo.png" alt="amarillo" width="100px"></a>
             <a href="../THIRD/FOUR/CUATRO.HTML"><img src="../colores/verde.png" alt="verde" width="100px"></a>
         </p>
