--- a/20250410/THIRD/FOUR/CUATRO.HTML
+++ b/20250410/THIRD/FOUR/CUATRO.HTML
@@ -13,7 +13,7 @@
         <p>
             <a href="../TRES.HTML"><img src="../../colores/blue.png" alt="azul" width="100px"></a>
             <a href="../../SECOND/DOS.HTML"><img src="../../colores/amarillo.png" alt="amarillo" width="100px"></a>
-            <a href="../../INDEX.HTML"><img src="../../colores/Sin título.png" alt="rojo" width="100px"></a>
+            <a href="../../index.html"><img src="../../colores/Sin título.png" alt="rojo" width="100px"></a>
         </p>
 
         <p>
