--- a/20250410/SECOND/DOS.HTML
+++ b/20250410/SECOND/DOS.HTML
@@ -11,7 +11,7 @@
     </header>
     <main>
         <p>
-            <a href="../INDEX.HTML"><img src="../colores/Sin título.png" alt="rojo" width="100px"></a>
+            <a href="../index.html"><img src="../colores/Sin título.png" alt="rojo" width="100px"></a>
             <a href="../THIRD/TRES.HTML"><img src="../colores/blue.png" alt="azul" width="100px"></a>
             <a href="../THIRD/FOUR/CUATRO.HTML"><img src="../colores/verde.png" alt="verde" width="100px"></a>
         </p>
