--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </header>
     <main>
     <h2>HTML</h2>
+    <p><a href="Gatitos Web/index.html">Diseño WEB Gatitos (trabajo final)</a></p>
     <p><a href="20250408/web/first index.html">HTML BÁSICO y NOTEPAD</a></p>
     <p><a href="20250408/20250409/red.html">ENRUTAMIENTO</a></p>
     <p><a href="20250410/index.html">ENLACES EXTERNOS</a></p>
